--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+	<title>Simadri Sai Bighnesh Prusty</title>
+	<link rel="icon" href="image/favicon.ico" type="image/x-icon">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
