--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<h3><span>Software Developer | DevOps Engineer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://www.linkedin.com/in/saibighnesh/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/sai0404/" target="_blank"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://github.com/saibighnesh" target="_blank"><i class="icon-github2"></i></a></li>
 									<li><a href="docs/Simadri_Sai_Bighnesh_Prusty_Software_Developer.pdf" target="_blank"><i class="icon-file-pdf"></i></a></li>
 								</ul>
@@ -74,7 +74,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Simadri Sai Bighnesh Prusty</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Sai Bighnesh</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+1 602 919 7167</span></li>
 						<li><span class="first-block">Email:</span><span style="font-size: small;" class="second-block" target="_blank">saibighneshprusty@gmail.com</span></li>
 						<li><span class="first-block">Website:</span><a class="second-block" href="https://saibighnesh.com">saibighnesh.com</a></li>
@@ -83,11 +83,11 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>I am Simadri Sai Bighnesh Prusty, recent graduate from Arizona State University with a Master's degree in Information Technology, focusing on Information Systems Management. I have a strong background in full-stack development and software engineering. I am passionate about creating innovative solutions that drive business growth and improve user experiences. </p>
+					<p>I am Sai Bighnesh, recent graduate from Arizona State University with a Master's degree in Information Technology, focusing on Information Systems Management. I have a strong background in full-stack development and software engineering. I am passionate about creating innovative solutions that drive business growth and improve user experiences. </p>
 					<p>During my studies and experiences, I designed dynamic websites and implemented RESTful APIs, honing my skills in various programming languages and technologies. I ensured seamless front-end and back-end integration. My technical expertise includes monitoring CI/CD pipelines, automating build and deployment processes, and maintaining accurate databases. These experiences have given me a keen eye for detail and a commitment to data accuracy and quality control.</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="https://www.linkedin.com/in/saibighnesh0404/"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/sai0404/"><i class="icon-linkedin2"></i></a></li>
 							<li><a href="https://github.com/saibighnesh"><i class="icon-github2"></i></a></li>
 							<li><a href="docs/Simadri_Sai_Bighnesh_Prusty_Software_Developer.pdf" target="_blank"><i class="icon-file-pdf"></i></a></li>
 						</ul>
@@ -464,7 +464,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2024 Simadri Sai Bighnesh Prusty. All Rights Reserved.</p>
+					<p>&copy; 2025 Sai Bighnesh. All Rights Reserved.</p>
 				</div>
 			</div>
 		</div>
