--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-	<title>Simadri Sai Bighnesh Prusty</title>
+	<title>Sai Bighnesh</title>
 	<link rel="icon" href="images/favicon.ico">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
